--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-sharing": "~8.4.1",
     "expo-status-bar": "~1.0.2",
     "native-base": "^2.13.14",
     "react": "16.13.1",
